Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43514

Linking against a statically compiled Qt fails under linux

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.4.0
    • Multimedia
    • None
    • 32bit build under Ubuntu 14.04
    • I9415beeeed9fb0e14ead3f0ab906f343b3934341

    Description

      Using a static build of Qt to link my application under Linux fails with linker errors due to multiple definition of symbols from libqtaudio_alsa.a and libqtmedia_pulse.a.

      This is problem is introduced by commit eb75bf8e3bde3: "Enable both PulseAudio and Alsa plugins on Linux"

      Configuring with -no-alsa or -no-pulseaudio should fix the problem, but afaik this conflict is not documented anywhere.
      Maybe the configure script should only enable one for static builds?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            gabriel Gabriel Hege
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes