src/plugins/alsa/qalsaaudiooutput.h
@@ -62,7 +62,7 @@ QT_BEGIN_NAMESPACE
 
 class QAlsaAudioOutput : public QAbstractAudioOutput
 {
-    friend class OutputPrivate;
+    friend class AlsaOutputPrivate;
     Q_OBJECT
 public:
     QAlsaAudioOutput(const QByteArray &device);
@@ -136,13 +136,13 @@ private:
     qreal m_volume;
 };
 
-class OutputPrivate : public QIODevice
+class AlsaOutputPrivate : public QIODevice
 {
     friend class QAlsaAudioOutput;
     Q_OBJECT
 public:
-    OutputPrivate(QAlsaAudioOutput* audio);
-    ~OutputPrivate();
+    AlsaOutputPrivate(QAlsaAudioOutput* audio);
+    ~AlsaOutputPrivate();
 
     qint64 readData( char* data, qint64 len);
     qint64 writeData(const char* data, qint64 len);
